@@ -1,7 +1,7 @@
 (*
  * IO - Abstract input/output
  * Copyright (C) 2003 Nicolas Cannasse
- *               2008 David Teller
+ *               2008 David Teller (contributor)
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
